[gd_scene load_steps=10 format=3 uid="uid://duaodttdyuc3w"]

[ext_resource type="Texture2D" uid="uid://d22algs2f3jie" path="res://objects/entities/#projectiles/bouncy_balls/textures/fireball.png" id="1_cvbqh"]
[ext_resource type="Script" path="res://objects/entities/#projectiles/bouncy_balls/scripts/bouncy_balls.gd" id="1_mhxtf"]
[ext_resource type="PackedScene" uid="uid://cqoo3f3wxx65x" path="res://objects/components/transformatic/scale_controller.tscn" id="2_76ql4"]
[ext_resource type="PackedScene" uid="uid://xtgdsan01iix" path="res://objects/components/transformatic/rotation_controller.tscn" id="2_j5gqn"]
[ext_resource type="PackedScene" uid="uid://blrprhoebns4y" path="res://objects/components/attacking_related/attacker.tscn" id="2_wh3xr"]
[ext_resource type="PackedScene" uid="uid://bj0eef13ohuuk" path="res://objects/components/visibility_on_screen_emitter/visibility_on_screen_emitter.tscn" id="3_71exo"]
[ext_resource type="PackedScene" uid="uid://ds0mt2h51dqa4" path="res://objects/components/effect_creator/effect_creator.tscn" id="6_st12a"]
[ext_resource type="PackedScene" uid="uid://blrfy7o1fjev" path="res://objects/entities/#effects/explosions/explosion_fire.tscn" id="8_hkovg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v54hu"]
radius = 8.0

[node name="Fireball" type="EntityBody2D"]
gravity = 1250.0
collision_layer = 4
collision_mask = 8
script = ExtResource("1_mhxtf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_v54hu")

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 37

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_v54hu")
debug_color = Color(0.956863, 0.211765, 0, 0.419608)

[node name="Attacker" parent="Area2D" instance=ExtResource("2_wh3xr")]
attacker_id = &"fireball"
root_path = NodePath("..")
metadata/_edit_pinned_properties_ = [&"attacker_id", &"root_path"]

[node name="VisibilityOnScreenEmitter" parent="." instance=ExtResource("3_71exo")]
visible = false
detected_screen_borders = 11
metadata/_edit_pinned_properties_ = [&"detected_screen_borders"]

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_cvbqh")

[node name="ScaleController" parent="Sprite2D" node_paths=PackedStringArray("accordance_node") instance=ExtResource("2_76ql4")]
accordance_node = NodePath("../..")
scale_x_accordance = "velocity:x"
metadata/_edit_pinned_properties_ = [&"scale_x_accordance", &"accordance_node"]

[node name="RotationController" parent="Sprite2D" instance=ExtResource("2_j5gqn")]
rotation_speed = 562.5
rotation_direction_accordance = 1
metadata/_edit_pinned_properties_ = [&"rotation_speed", &"rotation_direction_accordance"]

[node name="EffectCreator" parent="." instance=ExtResource("6_st12a")]
gizmo_extents = 4.0
effect = ExtResource("8_hkovg")
metadata/_edit_pinned_properties_ = [&"effect"]

[node name="Destroyer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="collided_ceiling" from="." to="." method="destroy"]
[connection signal="collided_floor" from="." to="." method="bounce_floor"]
[connection signal="collided_wall" from="." to="." method="destroy"]
[connection signal="projectile_destroy" from="." to="." method="queue_free"]
[connection signal="projectile_destroy" from="." to="EffectCreator" method="create_effect"]
[connection signal="receiver_called_back" from="Area2D/Attacker" to="." method="destroy" unbinds=1]
[connection signal="stayed_out_of_border" from="VisibilityOnScreenEmitter" to="." method="queue_free"]
[connection signal="timeout" from="Destroyer" to="." method="destroy"]
